--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -30,12 +30,12 @@
           </tr>
           <tr>
             <th>税込価格<br>(税抜価格)</th>
-            <th><%= (@item.tax_free_price * 1.1).round(0) %>(<%= @item.tax_free_price %>)円</th>
+            <th><%= (@item.price * 1.1).round(0) %>(<%= @item.price %>)円</th>
           </tr>
           <tr>
             <th>販売ステータス</th>
             <th>
-              <% if @item.sales_status == false %>
+              <% if @item.is_active == false %>
                 <span class="text-success">販売中</span>
               <% else %>
                 <span class="text-secondary">販売停止中</span>
