--- a/app/views/admin/items/_index.html.erb
+++ b/app/views/admin/items/_index.html.erb
@@ -11,14 +11,14 @@
   </thead>
 
   <tbody>
-    <% @items.each do |item| %>
+    <% items.each do |item| %>
       <tr>
         <td><%= item.id  %></td>
         <td nowrap><u><%= link_to item.name ,admin_item_path(item.id), class: "text-dark"  %></u></td>
-        <td><%= item.tax_free_price %></td>
+        <td><%= item.price %></td>
         <td nowrap><%= item.genre.name %></td>
         <td nowrap>
-        <% if item.sales_status == false %>
+        <% if item.is_active == false %>
             <span class="text-success"><strong>販売中</strong></span>
         <% else %>
             <span class="text-secondary"><strong>販売停止中</strong></span>
