--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -46,7 +46,7 @@
   </table>
   <div class="row">
     <h3 class="col-2">配送先</h3>
-    <%= link_to "一覧を見る", public_shipping_addresses_path, class:"btn btn-primary" %>
+    <%= link_to "一覧を見る", public_addresses_path, class:"btn btn-primary" %>
   </div>
   <div class="row mt-3">
     <h3 class="col-2">注文履歴</h3>
