--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,67 +1,63 @@
-<% if current_customer.cart_items.blank? %>
-  <div class ="container">
-    <div class="row justify-content-center">
-      <p class="text-center p-5">カートに商品がありません</p>
-      <div class="w-100"></div>
-      <%= link_to '買い物を続ける', root_path, class: 'btn btn-md btn-template-reverse' %>
+<div class="container">
+  <div class="row">
+    <div class="d-flex justify-content-between col-12 align-items-center">
+      <h5 style="padding:8px; background-color:#eeeeee;" class="block">ショッピングカート</h5>
+
+      <%= link_to "カートを空にする", public_cart_items_destroy_all_path, method: :delete, class: "btn btn-danger" %>
     </div>
-  </div>
-<% else %>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-xl-12 col-lg-12">
-        <div class="d-flex my-3">
-          <h5 class="my-auto">ショッピングカート</h5>
-          <div class="ml-auto">
-            <%= link_to 'カートを空にする', public_cart_items_destroy_all_path, method: :delete, remote: true,data: {confirm: "すべて空にしますか？"}, class: 'btn btn-md btn-outline-danger' %>
-          </div>
-        </div>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>商品名</th>
-              <th>単価(税込)</th>
-              <th>数量</th>
-              <th>小計</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody class="cart-items">
-            <% current_customer.cart_items.each do |cart_item| %>
-              <tr id="cart_<%= cart_item.id %>">
-                <td class="align-middle">
-                  <%= image_tag cart_item.item.get_image(50,75) %>
-                  <%= cart_item.item.name %>
-                </td>
-                <!--税込み価格10%modelに記載-->
-                <td class="align-middle"><%= cart_item.item.with_tax_price.to_s(:delimited) %></td>
-                <td class="align-middle" name="myform">
-                  <%= form_with model: cart_item, class: 'm-auto', id: 'form', local: false do |f| %>
-                    <div class="row d-flex">
-                      <%= f.select :amount, *[1..99] , {} , class: 'cart-item-select form-control col-md-4 pr-md-2 pr-lg-0 my-auto' %>
-                      <%= f.submit '更新', class: "btn btn-template-reverse col-md-4 my-auto pr-md-5 pr-lg-3" %>
-                    </div>
-                  <% end %>
-                </td>
-                <td class="align-middle sub-total"><%= cart_item.subtotal.to_s(:delimited) %></td>
-                <td class="text-right align-middle"><%= link_to '削除する', cart_item_path(cart_item), method: :delete, remote: true, class: 'btn btn-md btn-outline-danger' %></td>
-              </tr>
+
+    <table class='table table-hover table-bordered '>
+      <thead>
+        <tr class="table-secondary table">
+          <th class="col-4">商品名</th>
+          <th class="col-2">単価（税込）</th>
+          <th class="col-2">数量</th>
+    　　  　<th class="col-2">小計</th>
+          <th colspan="1" class="col-2"></th>
+        </tr>
+      </thead>
+      <tbody class="text-start table-sm">
+        <% @cart_items.each do |cart_item| %>
+        <tr>
+          <td class="align-middle">
+            <% if cart_item.item.image.attached? %>
+              <%= image_tag cart_item.item.image, size: "50x50" %>
+            <% else %>
+              <%= image_tag 'no_image.jpg', size: "50x50" %>
             <% end %>
-          </tbody>
-        </table>
-        <div class="d-flex my-5">
-          <%= link_to '買い物を続ける', root_path, class: 'btn btn-template-reverse my-auto' %>
-          <table class="table col-5 ml-auto my-auto">
-            <tbody>
-              <tr>
-                <td>合計金額</td>
-                <td class="all-with-tax-price"><%= current_customer.all_with_tax_price.to_s(:delimited) %></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="row justify-content-center"><%= link_to '注文情報入力画面', new_order_path, class: 'btn btn-md btn--orange my-3' %></div>
-      </div>
+            <%= cart_item.item.name %>
+          </td>
+          <td class="align-middle"><%= cart_item.item.with_tax_price.to_s(:delimited, delimiter: ',') %></td>
+          <td class="align-middle">
+            <%= form_with model:cart_item, url: public_cart_item_path(cart_item.id), method: :patch do |f| %>
+              <div class="form-group">
+                <%= f.hidden_field :item_id, value: cart_item.item_id %>
+              </div>
+              <div class="form-group">
+                <%= f.select :amount, *[1..10],  include_blank: '個数選択', selected: cart_item.amount, class: 'form-control' %>
+                <%= f.submit "変更", class: 'btn btn-success' %>
+              </div>
+            <% end %>
+          </td>
+          <td class="align-middle"><%= cart_item.subtotal.to_s(:delimited, delimiter: ',') %></td>
+          <td class="align-middle text-center"><%= link_to '削除する', public_cart_item_path(cart_item.id), method: :delete, class: "btn btn-sm btn-danger" %></td>
+          <% @total +=  cart_item.subtotal %>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
     </div>
-  </div>
-<% end %>
+    <div class="d-flex flex-row align-items-center justify-content-between">
+      <%= link_to "買い物を続ける" , "/", class: "btn btn-info col-2" %>
+      <table class="table table-bordered offset-6">
+        <tr>
+          <th class="col-2 table-secondary">合計金額</th>
+          <th class="col-2"><%= @total.to_s(:delimited, delimiter: ',') %></th>
+      </table>
+    </div>
+
+    <div style="margin-top:10px;" class="col text-center">
+      <%= link_to "情報入力に進む", public_addresses_path, class: "btn btn-success " %>
+    </div>
+
+</div>
